small bug fixxed in big-edit-task-input (visibility bug fixed)

--- a/css/board.css
+++ b/css/board.css
@@ -769,7 +769,7 @@ body .translate-100 {
 
 #big-edit-task-subtask-input-container {
   position: relative;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 .big-task-pop-up-subtasks {
